cmake_minimum_required(VERSION 3.1)
set(EXECUTABLE_NAME "autoproject")
add_library(ConfigFile STATIC ConfigFile.cpp)
add_library(autoproj STATIC AutoProject.cpp)
add_executable(${EXECUTABLE_NAME} main.cpp)
if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
    target_link_libraries(${EXECUTABLE_NAME} autoproj ConfigFile stdc++fs)
else()
    target_link_libraries(${EXECUTABLE_NAME} autoproj ConfigFile)
endif()
install(TARGETS ${EXECUTABLE_NAME} DESTINATION bin)
