cmake_minimum_required(VERSION 3.20)
set(EXECUTABLE_NAME "autoproject")
add_library(ConfigFile STATIC ConfigFile.cpp)
target_include_directories(ConfigFile PRIVATE "${PROJECT_BINARY_DIR}")
target_compile_features(ConfigFile PUBLIC cxx_std_20)
add_library(autoproj STATIC AutoProject.cpp trim.cpp)
target_compile_features(autoproj PUBLIC cxx_std_20)
target_include_directories(autoproj PRIVATE "${PROJECT_BINARY_DIR}")
add_executable(${EXECUTABLE_NAME} main.cpp)
target_include_directories(${EXECUTABLE_NAME} PRIVATE "${PROJECT_BINARY_DIR}")
target_compile_features(${EXECUTABLE_NAME} PRIVATE cxx_std_20)

if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
    target_link_libraries(${EXECUTABLE_NAME} PRIVATE autoproj ConfigFile stdc++fs)
else()
    target_link_libraries(${EXECUTABLE_NAME} PRIVATE autoproj ConfigFile)
endif()
install(TARGETS ${EXECUTABLE_NAME} DESTINATION bin)
