cmake_minimum_required(VERSION 3.1)
include_directories( ${CMAKE_HOME_DIRECTORY}/src )
add_executable(ConfigFileTest ConfigFileTest.cpp)
add_executable(AutoProjectTest AutoProjectTest.cpp)
set(autoproject ${CMAKE_BINARY_DIR}/src/autoproject)
configure_file(createExamples.sh ${CMAKE_CURRENT_BINARY_DIR}/createExamples.sh @ONLY)
target_link_libraries(ConfigFileTest ConfigFile cppunit)
target_link_libraries(AutoProjectTest AutoProject cppunit)
add_test(ConfigFileTest ConfigFileTest)
add_test(AutoProjectTest AutoProjectTest)
add_test(createRandqt createExamples.sh ${CMAKE_CURRENT_SOURCE_DIR}/examples/randqt.md)
add_test(adjlist createExamples.sh ${CMAKE_CURRENT_SOURCE_DIR}/examples/adjlist.md)
add_test(foo createExamples.sh ${CMAKE_CURRENT_SOURCE_DIR}/examples/foo.md)
add_test(llist26 createExamples.sh ${CMAKE_CURRENT_SOURCE_DIR}/examples/llist26.md)
add_test(mandel2 createExamples.sh ${CMAKE_CURRENT_SOURCE_DIR}/examples/mandel2.md)
add_test(minefield createExamples.sh ${CMAKE_CURRENT_SOURCE_DIR}/examples/minefield.md)
add_test(mop createExamples.sh ${CMAKE_CURRENT_SOURCE_DIR}/examples/mop.md)
add_test(ms2 createExamples.sh ${CMAKE_CURRENT_SOURCE_DIR}/examples/ms2.md)
add_test(ms createExamples.sh ${CMAKE_CURRENT_SOURCE_DIR}/examples/ms.md)
add_test(octal createExamples.sh ${CMAKE_CURRENT_SOURCE_DIR}/examples/octal.md)
add_test(priceavg createExamples.sh ${CMAKE_CURRENT_SOURCE_DIR}/examples/priceavg.md)
add_test(randqt createExamples.sh ${CMAKE_CURRENT_SOURCE_DIR}/examples/randqt.md)
add_test(shader createExamples.sh ${CMAKE_CURRENT_SOURCE_DIR}/examples/shader.md)
add_test(snake8 createExamples.sh ${CMAKE_CURRENT_SOURCE_DIR}/examples/snake8.md)
add_test(textris createExamples.sh ${CMAKE_CURRENT_SOURCE_DIR}/examples/textris.md)
