cmake_minimum_required(VERSION 3.1)
add_executable(ConfigFileTest ConfigFileTest.cpp)
target_include_directories(ConfigFileTest ${CMAKE_HOME_DIRECTORY}/src )
add_executable(AutoProjectTest AutoProjectTest.cpp)
target_include_directories(AutoProjectTest ${CMAKE_HOME_DIRECTORY}/src )
set(autoproject ${CMAKE_BINARY_DIR}/src/autoproject)
if(WIN32)
    set(TESTSCRIPT "createExamples.bat")
    configure_file(${TESTSCRIPT} ${CMAKE_CURRENT_BINARY_DIR}/createExamples.bat @ONLY)
else()
    set(TESTSCRIPT "createExamples.sh")
    configure_file(${TESTSCRIPT} ${CMAKE_CURRENT_BINARY_DIR}/createExamples.sh @ONLY)
endif()
target_link_libraries(ConfigFileTest ConfigFile cppunit)
target_link_libraries(AutoProjectTest autoproj cppunit)
add_test(ConfigFileTest ConfigFileTest)
add_test(AutoProjectTest AutoProjectTest)
add_test(createRandqt ${TESTSCRIPT} ${CMAKE_CURRENT_SOURCE_DIR}/examples/randqt.md)
add_test(adjlist ${TESTSCRIPT} ${CMAKE_CURRENT_SOURCE_DIR}/examples/adjlist.md)
add_test(autoproj ${TESTSCRIPT} ${CMAKE_CURRENT_SOURCE_DIR}/examples/autoproj.md)
add_test(llist26 ${TESTSCRIPT} ${CMAKE_CURRENT_SOURCE_DIR}/examples/llist26.md)
add_test(mandel2 ${TESTSCRIPT} ${CMAKE_CURRENT_SOURCE_DIR}/examples/mandel2.md)
add_test(minefield ${TESTSCRIPT} ${CMAKE_CURRENT_SOURCE_DIR}/examples/minefield.md)
add_test(threadbuffer ${TESTSCRIPT} ${CMAKE_CURRENT_SOURCE_DIR}/examples/threadbuffer.md)
add_test(ms2 ${TESTSCRIPT} ${CMAKE_CURRENT_SOURCE_DIR}/examples/ms2.md)
add_test(ms ${TESTSCRIPT} ${CMAKE_CURRENT_SOURCE_DIR}/examples/ms.md)
add_test(octal ${TESTSCRIPT} ${CMAKE_CURRENT_SOURCE_DIR}/examples/octal.md)
add_test(priceavg ${TESTSCRIPT} ${CMAKE_CURRENT_SOURCE_DIR}/examples/priceavg.md)
add_test(randqt ${TESTSCRIPT} ${CMAKE_CURRENT_SOURCE_DIR}/examples/randqt.md)
add_test(shader ${TESTSCRIPT} ${CMAKE_CURRENT_SOURCE_DIR}/examples/shader.md)
add_test(snake8 ${TESTSCRIPT} ${CMAKE_CURRENT_SOURCE_DIR}/examples/snake8.md)
add_test(textris ${TESTSCRIPT} ${CMAKE_CURRENT_SOURCE_DIR}/examples/textris.md)
