cmake_minimum_required(VERSION 3.15)
add_executable(ConfigFileTest ConfigFileTest.cpp)
target_include_directories(ConfigFileTest PRIVATE ${CMAKE_SOURCE_DIR}/src )
add_executable(AutoProjectTest AutoProjectTest.cpp)
target_include_directories(AutoProjectTest PRIVATE ${CMAKE_SOURCE_DIR}/src )
target_include_directories(AutoProjectTest PRIVATE ${PROJECT_BINARY_DIR} )
set(autoproject ${CMAKE_BINARY_DIR}/src/autoproject)
if(WIN32)
    set(TESTSCRIPT "createExamples.bat")
    configure_file(${TESTSCRIPT} ${CMAKE_CURRENT_BINARY_DIR}/createExamples.bat @ONLY)
else()
    set(TESTSCRIPT "createExamples.sh")
    configure_file(${TESTSCRIPT} ${CMAKE_CURRENT_BINARY_DIR}/createExamples.sh @ONLY)
endif()
file(COPY examples DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
target_link_libraries(ConfigFileTest ConfigFile cppunit)
target_link_libraries(AutoProjectTest autoproj cppunit)
add_test(ConfigFileTest ConfigFileTest)
add_test(AutoProjectTest AutoProjectTest)
add_test(createRandqt ${TESTSCRIPT} examples/randqt.md)
add_test(adjlist ${TESTSCRIPT} examples/adjlist.md)
add_test(autoproj ${TESTSCRIPT} examples/autoproj.md)
add_test(llist26 ${TESTSCRIPT} examples/llist26.md)
add_test(mandel2 ${TESTSCRIPT} examples/mandel2.md)
add_test(minefield ${TESTSCRIPT} examples/minefield.md)
add_test(threadbuffer ${TESTSCRIPT} examples/threadbuffer.md)
add_test(ms2 ${TESTSCRIPT} examples/ms2.md)
add_test(ms ${TESTSCRIPT} examples/ms.md)
add_test(octal ${TESTSCRIPT} examples/octal.md)
add_test(priceavg ${TESTSCRIPT} examples/priceavg.md)
add_test(randqt ${TESTSCRIPT} examples/randqt.md)
add_test(shader ${TESTSCRIPT} examples/shader.md)
add_test(snake8 ${TESTSCRIPT} examples/snake8.md)
add_test(textris ${TESTSCRIPT} examples/textris.md)
